--- a/SP2CJ/Pages/InsertJemaat.razor
+++ b/SP2CJ/Pages/InsertJemaat.razor
@@ -9,8 +9,8 @@
             <EditForm Model="@inputPelayan" OnValidSubmit="@HandleInput">
                 <DataAnnotationsValidator/>
                 <Blazorise.ValidationSummary/>
-                <div class="control columns block">
-                    <div class="column">
+                <div class="control columns block is-mobile is-multiline is-centered ">
+                    <div class="column is-multiline">
                         <div class="control">
                             <label class="is-flex is-justify-content-space-between">
                                 Nama:
