--- a/SP2CJ/Pages/_Host.cshtml
+++ b/SP2CJ/Pages/_Host.cshtml
@@ -11,3 +11,9 @@
 <link href="_content/Blazorise.Bulma/blazorise.bulma.css" rel="stylesheet" />
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+
+<script>
+    window.getUserAgent = () => {
+        return navigator.userAgent;
+    };
+</script>
